objects/MonthlyActualSales__x.object
<CustomObject>
    <description>MonthlyActualSales</description>
    <externalDataSource>TED_1_0_SFI_Daily_Monthly_Actual_Sales_Data</externalDataSource>
    <externalName>MonthlyActualSales</externalName>
    <fields>
        <fullName>FISCAL_YEAR_ID__c</fullName>
        <description>FISCAL_YEAR_ID</description>
        <externalDeveloperName>FISCAL_YEAR_ID</externalDeveloperName>
        <label>FISCAL_YEAR_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Detail__c</fullName>
        <externalDeveloperName>SFDC_EXTERNAL_ID</externalDeveloperName>
        <label>Forecast Detail</label>
        <length>255</length>
        <referenceTargetField>Forecast_Detail__c.External_ID__c</referenceTargetField>
        <referenceTo>Forecast_Detail__c</referenceTo>
        <relationshipLabel>MonthlyActualSales</relationshipLabel>
        <relationshipName>MonthlyActualSales</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>M10_AMOUNT__c</fullName>
        <description>M10_AMOUNT</description>
        <externalDeveloperName>M10_AMOUNT</externalDeveloperName>
        <label>M10_AMOUNT</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_AMOUNT__c</fullName>
        <description>M11_AMOUNT</description>
        <externalDeveloperName>M11_AMOUNT</externalDeveloperName>
        <label>M11_AMOUNT</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_AMOUNT__c</fullName>
        <description>M12_AMOUNT</description>
        <externalDeveloperName>M12_AMOUNT</externalDeveloperName>
        <label>M12_AMOUNT</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_EXTERNAL_ID__c</fullName>
        <description>SFDC_EXTERNAL_ID</description>
        <externalDeveloperName>SFDC_EXTERNAL_ID</externalDeveloperName>
        <label>SFDC_EXTERNAL_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEARLYTOT_AMOUNT__c</fullName>
        <description>YEARLYTOT_AMOUNT</description>
        <externalDeveloperName>YEARLYTOT_AMOUNT</externalDeveloperName>
        <label>YEARLYTOT_AMOUNT</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>MonthlyActualSales</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>FISCAL_YEAR_ID__c</columns>
        <columns>M1_AMOUNT__c</columns>
        <columns>M2_AMOUNT__c</columns>
        <columns>M3_AMOUNT__c</columns>
        <columns>YEARLYTOT_AMOUNT__c</columns>
        <columns>SFDC_EXTERNAL_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FISCAL_YEAR_ID__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>M1_AMOUNT__c</field>
            <operation>lessThan</operation>
            <value>900000</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>MonthlyActualSales</pluralLabel>
</CustomObject>